--- a/src/app/shared/layout/components/side-nav/side-nav.component.html
+++ b/src/app/shared/layout/components/side-nav/side-nav.component.html
@@ -9,7 +9,7 @@
     <div class="sidebar-logo">
     <a href="https://ng.ant.design/" target="_blank">
         <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-        <h1>Ant Design Of Angular</h1>
+        <h1>Mijn Werk App</h1>
     </a>
     </div>
     <ul nz-menu nzTheme="light" nzMode="inline" [nzInlineCollapsed]="isCollapsed">
