--- a/src/app/features/chat/chat.component.html
+++ b/src/app/features/chat/chat.component.html
@@ -3,7 +3,8 @@
   </app-header>
   <nz-content>
     <nz-layout class="inner-layout">
-      <app-side-nav></app-side-nav>
+      <app-side-nav [menuOptions] = "channels">
+      </app-side-nav>
       <nz-layout class="right-layout">
         <app-chat-window></app-chat-window>
         <nz-footer>Footer</nz-footer>
