--- a/src/app/features/chat/components/channels/channels.component.html
+++ b/src/app/features/chat/components/channels/channels.component.html
@@ -1,1 +1,5 @@
-<p>channels works!</p>
+<ul>
+    <li nz-menu-item>Channel 5</li>
+    <li nz-menu-item>Channel 6</li>
+    <li nz-menu-item>Channel 7</li>
+</ul>
