--- a/src/app/shared/layout/components/header/header.component.html
+++ b/src/app/shared/layout/components/header/header.component.html
@@ -1,5 +1,10 @@
 <nz-header>
-  <div class="app-header">
-    Header
-  </div>
+  <div class="logo"></div>
+  <ul nz-menu nzTheme="light" nzMode="horizontal">
+    <li nz-menu-item>nav 1</li>
+    <li nz-menu-item>nav 2</li>
+    <li nz-menu-item>
+      <!-- <a (click)='auth.logout()'>logout</a> -->
+    </li>
+  </ul>
 </nz-header>
