--- a/src/app/pages/log-in/log-in.component.html
+++ b/src/app/pages/log-in/log-in.component.html
@@ -1,23 +1,24 @@
+    <nz-alert nzType="error" nzCloseable nzMessage="Error" nzShowIcon (nzOnClose)="afterClose()"></nz-alert>
     <div nz-row nzJustify="space-around" nzAlign="middle">
         <div nz-col nzSpan="4">
-                <nz-card style="top: 50%; transform: translateY(80%);">
-                    <nz-spin [nzSpinning]="isLoading" [nzSize]="'large'">
+            <nz-card style="top: 50%; transform: translateY(80%);">
+                <nz-spin [nzSpinning]="isLoading" [nzSize]="'large'">
                 <form nz-form [formGroup]="loginForm" class="login-form" (ngSubmit)="submitForm()">
-                <nz-form-item>
+                    <nz-form-item>
                     <nz-form-control nzErrorTip="Please input your username!">
                     <nz-input-group nzPrefixIcon="user">
                         <input type="text" nz-input formControlName="userName" placeholder="Username" />
                     </nz-input-group>
                     </nz-form-control>
-                </nz-form-item>
-                <nz-form-item>
+                    </nz-form-item>
+                    <nz-form-item>
                     <nz-form-control nzErrorTip="Please input your Password!">
                     <nz-input-group nzPrefixIcon="lock">
                         <input type="password" nz-input formControlName="password" placeholder="Password" />
                     </nz-input-group>
                     </nz-form-control>
-                </nz-form-item>
-                <div nz-row class="login-form-margin">
+                    </nz-form-item>
+                    <div nz-row class="login-form-margin">
                     <div nz-col [nzSpan]="12">
                     <label nz-checkbox>
                         <span>Remember me</span>
@@ -26,11 +27,11 @@
                     <div nz-col [nzSpan]="12">
                     <a class="login-form-forgot">Forgot password</a>
                     </div>
-                </div>
-                <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Log in</button>
-                Or <a routerLink="/signup"> register now! </a>
+                    </div>
+                    <button nz-button class="login-form-button login-form-margin" [nzType]="'primary'">Log in</button>
+                    Or <a routerLink="/signup"> register now! </a>
                 </form>
                 </nz-spin>
-                </nz-card>
+            </nz-card>
         </div>
     </div>
