--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,7 +1,7 @@
 <div nz-row nzJustify="space-around" nzAlign="middle">
     <div nz-col nzSpan="8">
         <nz-card style="top: 50%; transform: translateY(40%);">
-            <form nz-form [formGroup]="validateForm" (ngSubmit)="submitForm(validateForm.value)">
+            <form nz-form [formGroup]="signupForm" (ngSubmit)="submitForm(signupForm.value)">
                 <nz-form-item>
                     <nz-form-label [nzSpan]="7" nzRequired>Username</nz-form-label>
                     <nz-form-control [nzSpan]="12" nzHasFeedback nzValidatingTip="Validating..." [nzErrorTip]="userErrorTpl">
@@ -62,7 +62,7 @@
                 </nz-form-item>
                 <nz-form-item nz-row class="register-area">
                     <nz-form-control [nzOffset]="7" [nzSpan]="14">
-                        <button nz-button nzType="primary" [disabled]="!validateForm.valid">Register</button>
+                        <button nz-button nzType="primary" [disabled]="!signupForm.valid">Register</button>
                         <button nz-button (click)="resetForm($event)">Reset</button>
                     </nz-form-control>
                 </nz-form-item>
