--- a/src/app/shared/layout/components/header/header.component.html
+++ b/src/app/shared/layout/components/header/header.component.html
@@ -1,16 +1,22 @@
 <nz-header>
-  <div class="logo"></div>
-  <ul nz-menu nzTheme="light" nzMode="horizontal" *ngIf="currentUser else loggedOut">
-    <li nz-menu-item>nav 1</li>
-    <li nz-menu-item>nav 2</li>
-    <li nz-menu-item>
-      <a (click)='auth.logout()'>logout</a>
-    </li>
-  </ul>
+    <div style="width: 75%; margin: 0px auto;">
+      <div class="logo"></div>
+      <ul nz-menu nzTheme="dark" nzMode="horizontal"
+        class="header-menu"
+        *ngIf="currentUser else loggedOut">
+          <li nz-menu-item>nav 1</li>
+          <li nz-menu-item>
+            <a routerLink="/app/user/{{currentUser.id}}" routerLinkActive="active">Profile</a>
+          </li>
+          <li nz-menu-item>
+            <a (click)='auth.logout()'>logout</a>
+          </li>
+      </ul>
+    </div>
 </nz-header>
 
 <ng-template #loggedOut>
-  <ul nz-menu nzTheme="light" nzMode="horizontal">
+  <ul nz-menu nzTheme="dark" nzMode="horizontal">
     <li nz-menu-item>
       <a routerLink="/login" routerLinkActive="active">Login</a>
     </li>
