--- a/src/app/features/chat/chat.component.scss
+++ b/src/app/features/chat/chat.component.scss
@@ -37,7 +37,7 @@ nz-sider {
 
 .inner-content {
   overflow: auto;
-  text-align: center;
+  // text-align: center;
   padding: 0 24px;
   min-height: 280px;
 }
