--- a/src/app/features/chat/components/chat-window/chat-window.component.scss
+++ b/src/app/features/chat/components/chat-window/chat-window.component.scss
@@ -4,8 +4,8 @@ nz-content {
   }
   
   .inner-content {
-    padding: 24px;
+    padding: 12px;
     background: #fff;
-    text-align: center;
+    // text-align: center;
     // height: 100%;
   }
