Add page header

--- a/src/app/features/chat/chat.component.html
+++ b/src/app/features/chat/chat.component.html
@@ -3,11 +3,8 @@
   <app-header>
   </app-header>
   <nz-content class="outer-content">
-      <nz-breadcrumb>
-        <nz-breadcrumb-item>Home</nz-breadcrumb-item>
-        <nz-breadcrumb-item>List</nz-breadcrumb-item>
-        <nz-breadcrumb-item>App</nz-breadcrumb-item>
-      </nz-breadcrumb>
+      <nz-page-header class="site-page-header" nzTitle="Channel" nzSubtitle="This is a subtitle">
+      </nz-page-header>
       <nz-layout class="inner-layout">
         <nz-sider nzWidth="250px" nzTheme="light">
           <ul nz-menu nzMode="inline" class="sider-menu">
