--- a/src/app/features/chat/chat.component.scss
+++ b/src/app/features/chat/chat.component.scss
@@ -18,6 +18,10 @@ nz-breadcrumb {
   margin: 16px 0;
 }
 
+nz-page-header {
+  padding: 8px 24px;
+}
+
 .inner-layout {
   max-height: 80vh;
   min-height: 80vh;
