--- a/src/app/features/user/user.component.html
+++ b/src/app/features/user/user.component.html
@@ -1,20 +1,9 @@
 <nz-layout class="layout">
-    <nz-header>
-    <div style="width: 75%; margin: 0px auto;">
-      <div class="logo"></div>
-      <ul nz-menu nzTheme="dark" nzMode="horizontal">
-        <li nz-menu-item>nav 1</li>
-        <li nz-menu-item>nav 2</li>
-        <li nz-menu-item>nav 3</li>
-      </ul>
-    </div>
-    </nz-header>
+    <app-header>
+    </app-header>
     <nz-content class="outer-content">
-        <nz-breadcrumb>
-          <nz-breadcrumb-item>Home</nz-breadcrumb-item>
-          <nz-breadcrumb-item>List</nz-breadcrumb-item>
-          <nz-breadcrumb-item>App</nz-breadcrumb-item>
-        </nz-breadcrumb>
+        <nz-page-header class="site-page-header" nzTitle="Profile" nzSubtitle="This is a subtitle">
+        </nz-page-header>
         <nz-layout class="inner-layout">
           <nz-sider nzWidth="250px" nzTheme="light">
             <ul nz-menu nzMode="inline" class="sider-menu">
@@ -66,5 +55,5 @@
           </nz-content>
         </nz-layout>
     </nz-content>
-    <nz-footer>Ant Design ©2020 Implement By Angular</nz-footer>
+    <nz-footer>Mijn Werk ©2020</nz-footer>
   </nz-layout>
