--- a/src/app/shared/layout/components/header/header.component.scss
+++ b/src/app/shared/layout/components/header/header.component.scss
@@ -3,14 +3,14 @@
     position: fixed;
     padding: 0 60px;
     width: 100%;
-    // z-index: 10;
+    z-index: 10;
   }
 
   .logo {
     width: 120px;
     height: 31px;
     background: rgba(255, 255, 255, 0.2);
-    margin: 16px 30px 16px 0;
+    margin: 16px 30px 16px 30px;
     float: left;
   }
   
