--- a/src/app/shared/layout/components/side-nav/side-nav.component.html
+++ b/src/app/shared/layout/components/side-nav/side-nav.component.html
@@ -1,27 +1,28 @@
-<nz-sider
-    nzTheme="light"
-    nzCollapsible
-    nzWidth="256px"
-    nzBreakpoint="md"
-    [(nzCollapsed)]="isCollapsed"
-    [nzTrigger]="null">
-    <div class="ant-layout-sider-children" >
-    <div class="sidebar-logo">
-        <a href="https://ng.ant.design/" target="_blank">
-            <img src="https://ng.ant.design/assets/img/logo.svg" alt="logo">
-            <h1>Mijn Werk App</h1>
-        </a>
-    </div>
-    <ul nz-menu nzMode="inline" *ngIf="menuOptions.length">
-        <li nz-menu-item *ngFor="let option of menuOptions">{{ option }}</li>
+
+<nz-sider nzWidth="250px" nzTheme="light">
+    <ul nz-menu nzMode="inline" class="sider-menu">
+      <li nz-submenu nzOpen nzIcon="user" nzTitle="subnav 1">
+        <ul *ngIf="menuOptions.length">
+            <li nz-menu-item *ngFor="let option of menuOptions" >
+                <a [routerLink]="['/app/chat', option.id]">#{{ option.name }}</a>
+            </li>
+        </ul>
+      </li>
+      <li nz-submenu nzTitle="subnav 2" nzIcon="laptop">
+        <ul>
+          <li nz-menu-item>option5</li>
+          <li nz-menu-item>option6</li>
+          <li nz-menu-item>option7</li>
+          <li nz-menu-item>option8</li>
+        </ul>
+      </li>
+      <li nz-submenu nzTitle="subnav 3" nzIcon="notification">
+        <ul>
+          <li nz-menu-item>option9</li>
+          <li nz-menu-item>option10</li>
+          <li nz-menu-item>option11</li>
+          <li nz-menu-item>option12</li>
+        </ul>
+      </li>
     </ul>
-    </div>
-    <!-- <div nz-sider-trigger nzTheme="dark" 
-        class="ant-layout-sider-zero-width-trigger" 
-        (click)="isCollapsed = !isCollapsed">
-        <i class="trigger"
-           nz-icon
-           [nzType]="isCollapsed ? 'menu-unfold' : 'menu-fold'"
-        ></i>
-    </div> -->
 </nz-sider>
