--- a/src/app/shared/layout/components/side-nav/side-nav.component.scss
+++ b/src/app/shared/layout/components/side-nav/side-nav.component.scss
@@ -1,72 +1,17 @@
-:host {
-    display: flex;
-    text-rendering: optimizeLegibility;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-  }
-  
-  .app-layout {
-    height: 100vh;
-  }
-  
-  .menu-sidebar {
-    position: fixed;
-    z-index: 2;
-    min-height: 100vh;
-    box-shadow: 2px 0 6px rgba(0,21,41,.35);
-  }
-  
-  .header-trigger {
-    height: 64px;
-    padding: 20px 24px;
-    font-size: 20px;
-    cursor: pointer;
-    transition: all .3s,padding 0s;
-  }
-  
-  .trigger:hover {
-    color: #1890ff;
-  }
-  
-  nz-sider {
-    overflow: auto; // makes the trigger disappear.
-    height: 100%;
-    position: fixed;
-    left: 0;
-  }
-  
-  .sidebar-logo {
-    position: relative;
-    height: 64px;
-    padding-left: 24px;
-    overflow: hidden;
-    line-height: 64px;
-    background: #001529;
-    transition: all .3s;
-  }
-  
-  .sidebar-logo img {
-    display: inline-block;
-    height: 32px;
-    width: 32px;
-    vertical-align: middle;
-  }
-  
-  .sidebar-logo h1 {
-    display: inline-block;
-    margin: 0 0 0 20px;
-    color: #fff;
-    font-weight: 600;
-    font-size: 14px;
-    font-family: Avenir,Helvetica Neue,Arial,Helvetica,sans-serif;
-    vertical-align: middle;
-  }
-  
-  .logo {
-    width: 120px;
-    height: 31px;
-    background: rgba(255, 255, 255, 0.2);
-    margin: 16px 24px 16px 0;
-    float: left;
-  }
 
+nz-sider {
+  overflow: auto;
+  position: static;
+}
+
+.sider-menu {
+  height: 100%;
+}
+
+.logo {
+  width: 120px;
+  height: 31px;
+  background: rgba(255, 255, 255, 0.2);
+  margin: 16px 28px 16px 0;
+  float: left;
+}
