--- a/src/app/features/user/user.component.html
+++ b/src/app/features/user/user.component.html
@@ -5,53 +5,9 @@
         <nz-page-header class="site-page-header" nzTitle="Profile" nzSubtitle="This is a subtitle">
         </nz-page-header>
         <nz-layout class="inner-layout">
-          <nz-sider nzWidth="250px" nzTheme="light">
-            <ul nz-menu nzMode="inline" class="sider-menu">
-              <li nz-submenu nzOpen nzTitle="subnav 1" nzIcon="user">
-                <ul>
-                  <li nz-menu-item nzSelected>option1</li>
-                  <li nz-menu-item>option2</li>
-                  <li nz-menu-item>option3</li>
-                  <li nz-menu-item>option4</li>
-                </ul>
-              </li>
-              <li nz-submenu nzTitle="subnav 2" nzIcon="laptop">
-                <ul>
-                  <li nz-menu-item>option5</li>
-                  <li nz-menu-item>option6</li>
-                  <li nz-menu-item>option7</li>
-                  <li nz-menu-item>option8</li>
-                </ul>
-              </li>
-              <li nz-submenu nzTitle="subnav 3" nzIcon="notification">
-                <ul>
-                  <li nz-menu-item>option9</li>
-                  <li nz-menu-item>option10</li>
-                  <li nz-menu-item>option11</li>
-                  <li nz-menu-item>option12</li>
-                </ul>
-              </li>
-              <li nz-submenu nzTitle="subnav 4" nzIcon="laptop">
-                <ul>
-                  <li nz-menu-item>option5</li>
-                  <li nz-menu-item>option6</li>
-                  <li nz-menu-item>option7</li>
-                  <li nz-menu-item>option8</li>
-                </ul>
-              </li>
-            </ul>
-          </nz-sider>
+          <app-side-nav></app-side-nav>
           <nz-content class="inner-content">
-            ...
-            <br />
-            Really
-            <br />...<br />...<br />...<br />
-            long
-            <br />...<br />...<br />...<br />...<br />...<br />... <br />...<br />...<br />...<br />...<br />...<br />...
-            <br />...<br />...<br />...<br />...<br />...<br />... <br />...<br />...<br />...<br />...<br />...<br />...
-            <br />...<br />...<br />...<br />...<br />...<br />... <br />...<br />...<br />...<br />...<br />...<br />...
-            <br />...<br />...<br />...<br />...<br />...<br />
-            content
+            <app-user-profile></app-user-profile>
           </nz-content>
         </nz-layout>
     </nz-content>
