--- a/src/app/features/user/components/user-profile/user-profile.component.html
+++ b/src/app/features/user/components/user-profile/user-profile.component.html
@@ -1,12 +1,10 @@
     <div class="inner-content">
-        <nz-descriptions nzTitle="User Info" nzLayout="vertical">
-          <nz-descriptions-item nzTitle="Full Name">Zhou Maomao</nz-descriptions-item>
-          <nz-descriptions-item nzTitle="Telephone">18100000000</nz-descriptions-item>
-          <nz-descriptions-item nzTitle="Live">Hangzhou, Zhejiang</nz-descriptions-item>
-          <nz-descriptions-item nzTitle="Remark">Empty</nz-descriptions-item>
-          <nz-descriptions-item nzTitle="Address">
-            No. 18, Wantang Road, Xihu District, Hangzhou, Zhejiang, China
-          </nz-descriptions-item>
+        <nz-descriptions nzTitle="User Info" [nzBordered]="true" [nzColumn]="1">
+          <nz-descriptions-item nzTitle="Full Name">{{user?.firstName }} {{ user?.lastName}}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="Bio">{{ user?.bio }}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="E-mail Address">{{ user?.email }}</nz-descriptions-item>
+          <nz-descriptions-item nzTitle="Quote">{{user?.quote}}</nz-descriptions-item>
+          
         </nz-descriptions>
     </div>
 
