--- a/src/app/features/chat/chat.component.html
+++ b/src/app/features/chat/chat.component.html
@@ -3,11 +3,11 @@
   <app-header>
   </app-header>
   <nz-content class="outer-content">
-      <nz-page-header class="site-page-header" nzTitle="Channel" nzSubtitle="This is a subtitle">
+      <nz-page-header class="site-page-header" nzTitle="Channel" nzSubtitle="{{channel?.name}}">
       </nz-page-header>
       <nz-layout class="inner-layout">
         <nz-sider nzWidth="250px" nzTheme="light">
-          <app-side-nav-items [menuOptions]="channelService.channels | async"></app-side-nav-items>
+          <app-side-nav-items [menuOptions]="channelService.channelIDs | async"></app-side-nav-items>
         </nz-sider>
         <nz-content class="inner-content">
           <app-chat-window></app-chat-window>
