--- a/src/app/features/chat/chat.component.scss
+++ b/src/app/features/chat/chat.component.scss
@@ -25,7 +25,7 @@ nz-page-header {
 .inner-layout {
   max-height: 80vh;
   min-height: 80vh;
-  padding: 4px 0;
+  // padding: 4px 0;
   background: #fff;
   height: 100%;
 }
@@ -41,7 +41,6 @@ nz-sider {
 
 .inner-content {
   overflow: auto;
-  // text-align: center;
   padding: 0 24px;
   min-height: 280px;
 }
